<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>stat</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.22.2</version>
      </plugin>
    </plugins>
  </build>
  <groupId>dk.alexandra.fresco</groupId>
  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>demo</module>
    <module>core</module>
  </modules>

  <packaging>pom</packaging>

  <properties>
    <fresco.version>1.3.1-SNAPSHOT</fresco.version>
    <maven.compiler.source>9</maven.compiler.source>
    <maven.compiler.target>9</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>0.2-SNAPSHOT</version>

</project>